tests/specs/run/type_definitions_for_export/type_definitions_for_export.ts.out
Check [WILDCARD]type_definitions_for_export.ts
TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
bar(foo);
    ~~~
    at [WILDCARD]type_definitions_for_export.ts:7:5

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
