tests/specs/run/type_definitions_for_export/type_definitions_for_export.ts
import { foo } from "./export_type_def.ts";

function bar(a: number) {
  console.log(a);
}

bar(foo);
